@startuml
'https://plantuml.com/class-diagram

class App {
    main()
    start()
}

class Item{
    -name
    -value
    -serialNumber

    +getName()
    +setName()
    +getValue()
    +setValue()
    +getSerialNumber()
    +setSerialNumber()
}

class Inventory{
    -displayList
    -entireList

    +getDisplayList()
    +setDisplayList()
    +getEntireList()
    +getEntireList()
}

class MainWindowController{
    +initialize()
    +getTableIndex()

    -clickedNewItem()
    -clickedEditItem()
    -clickedRemoveItem()
    -clickedHelp()
    -clickedSaveTSVInventory()
    -clickedLoadTSVInventory()
    -clickedSaveHTMLInventory()
    -clickedLoadHTMLInventory()
}

class NewItemWindowController{
    -clickedSave()
    -createDialogue(String)

    +numFormat()
    +setOnItemAdded()
    +setOnIsUnique()
}

class EditItemWindowController{
    -clickedSave()
    -createDialogue(String)

    +numFormat()
    +setOnItemEdited()
    +setOnIsUnique()
}

class ListCentral {
    +indexConverter(int)
    +getDisplayList()
    +getWholeList()
    +setList(ObservableList)
    +addItem(Item)
    +removeItem(int)
    +removeAllItems()
    +editItemInfo(int index, String name, BigDecimal value, String serialNumber)
    +helpEmOut(URI uri)
}

class FileCentral {
    +saveTSVInventory(ObservableList, File)
    +saveHTMLInventory(ObservableList, File)
    +loadTSVInventory(File)
    +loadHTMLInventory(File)
}

javafx.Application <|--- App
javafx.MainWindow o-- javafx.NewItemWindow
javafx.MainWindow o-- javafx.EditItemWindow

App o-- ListCentral
App o-- FileCentral
App o-- EditItemWindowController
App o-- NewItemWindowController
App o-- MainWindowController
ListCentral o-- Item
ListCentral o-- Inventory
@enduml